<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multi Stored Apartment Maintenace</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="apartmentreg">APARTMENT REGISTRATION ONLY FOR PRESIDENTS</string>
    <string name="fullname">FullName</string>
    <string name="Apartmentdetails">Apartment Details</string>
    <string name="Apartmentname">Apartment Name</string>
    <string name="Cancel">cancel</string>
    <string name="Next">Next</string>
    <string name="no_of_residents">No of Residents</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="pincode">Pincode</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Gender">Gender</string>
    <string name="Age">Age</string>
    <string name="flatno">Flat no</string>
    <string name="phoneno">Phone Number</string>
    <string name="email">Email Id</string>
    <string name="Addresidents">Add Residents</string>
    <string name="rpassword">retype password</string>
    <string name="successful_registered">Successfully Registered</string>
    <string name="contacts">contacts</string>
    <string name="maintenace">maintenace</string>
    <string name="messages">messages</string>
    <string name="newsfeed">newsfeed</string>
    <string name="profile">profile</string>
    <string name="users">users</string>
    <string name="homepage">HOME PAGE</string>
    <string name="Home">Home</string>

</resources>
