<?xml version="1.0" encoding="utf-8"?>

       
        
      <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  
     android:fillViewport="true" >
     <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
          

             <TextView
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Apartmentdetails"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Apartmentname"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <EditText
        android:id="@+id/Aptname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="5dp"
        android:inputType="text"
        android:layout_marginRight="5dp"
        android:singleLine="true"/>


       


    <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/Address"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textPostalAddress"
        android:singleLine="true"/>
     <TextView
        android:id="@+id/runame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/City"
     
        android:layout_marginRight="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
     <TextView
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/State"
         android:layout_marginLeft="5dp"
      
        android:textAppearance="?android:attr/textAppearanceLarge" />

    

    <EditText
         android:id="@+id/State"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
     <TextView
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pincode"
         android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    

    <EditText
        android:id="@+id/pincode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    <TextView
     
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_of_residents"
         android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    

    <EditText
        android:id="@+id/countresidents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />




    


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
         <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next" 
         android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>


    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel" 
        android:layout_toRightOf="@id/submit"/>
    
    </RelativeLayout>
    </LinearLayout>
 </ScrollView>