<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
  
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/homepage"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
      
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="78dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/contacts"
            android:src="@drawable/contacts" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/profile" />

     </TableRow>
       <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="74dp"
      android:layout_height="74dp"
      android:contentDescription="@string/newsfeed"
       android:layout_margin="10dp"
      android:src="@drawable/users" />

  <ImageView
      android:id="@+id/imageView1"
      android:layout_width="76dp"
      android:layout_height="76dp"
    
       android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
      android:contentDescription="@string/newsfeed"
      android:src="@drawable/newsfeed" />

  </TableRow>
  <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

      <ImageView
          android:id="@+id/imageView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:contentDescription="@string/messages"
          android:src="@drawable/messages" />

  <ImageView
      android:id="@+id/imageView6"
      android:layout_width="66dp"
      android:layout_height="66dp"
       android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
      android:contentDescription="@string/maintenace"
      android:src="@drawable/maintenace" />
</TableRow>
</TableLayout>
