<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/successful_registered"
        
        android:textAppearance="?android:attr/textAppearanceLarge" />
 
    <Button
        android:id="@+id/Addresidents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="22dp"
        android:text="@string/Addresidents" />

    <Button
        android:id="@+id/Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="22dp"
        android:text="@string/Home" />

</LinearLayout>